<resources>
    <string name="app_name">Android_2</string>
    <string name="input">0</string>
    <string name="n_0">0</string>
    <string name="n_1">1</string>
    <string name="n_2">2</string>
    <string name="n_3">3</string>
    <string name="n_4">4</string>
    <string name="n_5">5</string>
    <string name="n_6">6</string>
    <string name="n_7">7</string>
    <string name="n_8">8</string>
    <string name="n_9">9</string>

    <string name="multiplication_operator">*</string>
    <string name="division_operator">/</string>
    <string name="plus_operator">+</string>
    <string name="minus_operator">-</string>
    <string name="equals_operator">=</string>
    <string name="dot">.</string>
    <string name="clear">C</string>
</resources>