<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:gravity="end"
        android:textSize="32sp"
        android:padding="16dp"
        android:background="#E0E0E0"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="1" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:stretchColumns="*">

        <TableRow>
            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_7"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#A0A0A0"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_8"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#A0A0A0"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_9"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#A0A0A0"
                android:layout_weight="1" />
            <Button
                android:id="@+id/buttonDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division_operator"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#2196F3"
                android:layout_weight="1" />

        </TableRow>

        <!-- Третья строка с цифрами 4, 5, 6 -->
        <TableRow>
            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_4"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#A0A0A0"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_5"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#A0A0A0"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_6"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#A0A0A0"
                android:layout_weight="1" />
            <Button
                android:id="@+id/buttonMultiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplication_operator"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#2196F3"
                android:layout_weight="1" />
        </TableRow>

        <!-- Четвертая строка с цифрами 1, 2, 3 -->
        <TableRow>
            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_1"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#A0A0A0"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_2"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#A0A0A0"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_3"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#A0A0A0"
                android:layout_weight="1" />
            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus_operator"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#2196F3"
                android:layout_weight="1" />

        </TableRow>

        <!-- Пятая строка с нулем и точкой -->
        <TableRow>
            <Button
                android:id="@+id/buttonC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#FF5722"
                android:layout_weight="1" />
            <Button
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_0"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#A0A0A0"
                android:layout_weight="1" />

            <Button
                android:id="@+id/buttonDot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dot"
                android:textSize="24sp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#FF5722"
                android:layout_weight="1" />
            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus_operator"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#2196F3"
                android:layout_weight="1" />

        </TableRow>
        <TableRow>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <Button
                android:id="@+id/buttonEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/equals_operator"
                android:textSize="24sp"
                android:textColor="#FFFFFF"
                android:backgroundTint="#4CAF50"
                android:layout_weight="1" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>